components/Footer/Footer.scss
section#footer {
	@function toRGB($color) {
		@return "rgb(" + red($color) + ", " + green($color) + ", " +
			blue($color) + ")";
	}
	background-color: $vibrant-blue;
	background: linear-gradient(
		to bottom,
		unquote(toRGB($vibrant-blue)) 0%,
		unquote(toRGB(mix($bg-color, $vibrant-blue, $weight: 20%))) 99%
	);
	$color: #dedede;
	color: mix($bg-color, $vibrant-blue, $weight: 70%);

	width: 100vw;
	position: absolute;
	left: 50%;
	transform: translateX(-50%);
	box-sizing: border-box;
	padding: calc(1rem + 1vh) $global-padding-horizontal;

	//Flex
	display: flex;
	flex-direction: column;

	//Font
	font-weight: 400;

	#footer-container {
		$mq-break: "screen and (max-width: 850px)";
		display: flex;
		align-items: center;
		justify-content: center;
		font-size: 12px;
		flex-wrap: nowrap;

		@media #{$mq-break} {
			flex-direction: column;
			justify-content: center;
			align-items: center;

			div {
				text-align: center;
				padding-right: unset !important;
				padding-bottom: 2vh;
			}
		}

		div {
			display: flex;
			flex-direction: column;
			justify-content: center;
			height: fit-content;
			padding-right: 2vw;
		}
		
		b {
			color: $bg-color;
		}

		b {
			color: $bg-color;
		}

		div#logotype {
			display: flex;
			justify-content: center;
			align-items: center;
			svg {
				width: unset;
				height: unset;
				padding: 1vmax;
				box-sizing: border-box;
				#logo {
					// fill: $color !important;
					// fill: white !important;
					fill: $bg-color !important;
				}
			}
			span#description {
				color: $bg-color;
				display: flex;
				align-items: center;
				text-align: center;
			}
		}

		div#middle {
			flex-direction: row;
			justify-content: center;
			align-items: center;
			div#nip-regon {
				width: min-content;
			}
			@media #{$mq-break} {
				width: 50%;
				justify-content: space-around;
			}

			@media #{$mq-phone} {
				width: unset;
				flex-direction: column;
			}
		}

		div#other {
			@media #{$mq-break} {
				width: 100%;
				justify-content: space-around;
				flex-direction: row;
			}

			@media #{$mq-phone} {
				flex-direction: column;
			}
		}
		div#e-mail {
			br {
				display: none;
			}

			@media #{$mq-phone} {
				br {
					display: block;
				}
			}
		}
	}
	a#credits {
		margin-top: calc(0.5rem + 2vw);
		font-size: 0.7rem;
		display: flex;
		flex-direction: row;
		justify-content: center;
		align-items: center;
		text-decoration: none;
		color: $bg-color;
		transition: all 0.25s ease-in-out;

		align-self: center;

		cursor: pointer;

		br {
			display: none;
		}

		#text {
			margin-right: 0.5rem;
		}

		border-radius: 0.5rem;
		padding: 0.25rem 1rem;
		@media not screen and (pointer: fine) {
			background-color: lighten($vibrant-blue, 2%);
			border: 1px solid $color;
		}

		&:hover {
			background-color: lighten($vibrant-blue, 3%);
		}

		@media #{$mq-phone} {
			text-align: center;
			margin-top: 1rem;
			font-size: 0.6rem;

			br {
				display: block;
			}
		}
		svg {
			color: $bg-color;
		}
	}
}

